--- a/scss/_heart.scss
+++ b/scss/_heart.scss
@@ -26,6 +26,7 @@
     font-size: 18px;
     position: absolute;
     left: 0;
+    bottom: 0.05rem;
     color: $secondary;
     transform: scaleY(0);
     cursor: pointer;
