--- a/scss/_menu-card.scss
+++ b/scss/_menu-card.scss
@@ -65,6 +65,7 @@
     height: 100%;
     transform: translateX(3rem);
     transition: all 750ms ease-in-out;
+    border-radius: 0 1rem 1rem 0;
   }
   &__success {
     color: #fff;
