--- a/scss/_section-menu-image.scss
+++ b/scss/_section-menu-image.scss
@@ -2,6 +2,14 @@
   margin-bottom: -2rem;
   &__image {
     object-fit: cover;
-    max-height: 20rem;
+    max-height: 14rem;
+  }
+}
+@media (min-width: $mama-bear) {
+  .section-menu-image {
+    margin-bottom: -5rem;
+    &__image {
+      max-height: 25rem;
+    }
   }
 }
